# litigation_assistant

./: .gitignore  IDEA.md  README.md
.github/workflows/: backend-deploy.yml  evals.yml  frontend-deploy.yml
backend/: .coverage  .env.example  Dockerfile  README.md  deploy.sh  litigation.db  pyproject.toml  requirements.txt  test_api.py
backend/app/: cli.py  main.py
backend/app/api/routers/: analyze.py  history.py  me.py
backend/app/core/: config.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  case.py  database.py
backend/app/schemas/: analyze.py  history.py
backend/app/services/: orchestrator.py  rag.py
backend/app/services/agents/: drafting.py  extraction.py  qa.py  strategy.py
backend/evals/: eval_extraction.py  eval_llm_judge.py  golden_cases.json
backend/src/: main.py
backend/src/agents/: drafting.py  extraction.py  format_markdown.py  orchestrator.py  qa.py  strategy.py
backend/src/agents/prompts/: __init__.py  drafting.py  extraction.py  qa.py  strategy.py
backend/src/api/: dependencies.py  routes_analyze.py  routes_cases.py
backend/src/core/: config.py  openai_client.py  security.py
backend/src/database/: models.py  session.py
backend/src/rag/: ingestion.py  pinecone_store.py  retriever.py  vector_store.py
backend/src/schemas/: ai_schemas.py  api_schemas.py
backend/src/serializers/: cases.py
backend/tests/: conftest.py  test_analyze.py  test_config.py  test_history.py  test_me.py  test_rag.py  test_schemas.py
data/raw/: contract_act_cap_23.txt  employment_act_2007.txt  land_act_2012.txt
docs/: DEPLOYMENT.md  DOCUMENTATION_AUDIT_LOG.md  PROJECT_WALKTHROUGH.md  backend.md  rag_enrichments_evals_guide.md  rag_integration_guide.md
frontend/: Dockerfile  README.md  deploy.sh  middleware.ts  package-lock.json  package.json  tsconfig.json
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/components/: index.html  pipeline-markdown-panel.tsx.html
frontend/lib/: api.ts
terraform/backend/: main.tf  outputs.tf  variables.tf
terraform/database/: main.tf  outputs.tf
terraform/frontend/: main.tf  outputs.tf  variables.tf
(+27 files in other folders)
