[project]
name = "litigation-prep-backend"
version = "0.1.0"
description = "FastAPI backend for the litigation prep assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
