[project]
name = "litigation-prep-backend"
version = "0.1.0"
description = "FastAPI backend for the litigation prep assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "openai>=1.0.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-multipart>=0.0.9",
  "aiosqlite>=0.19.0",
]

[project.scripts]
dev = "app.cli:dev"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
